--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "simshaun/recurr": "0.4.*"
   },
   "autoload": {
-    "psr-0": {
-      "Icalreader": "src/"
+    "psr-4": {
+      "Icalreader\\": "src/"
     }
   }
 }
