--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "stories-untold/icalreader",
   "require": {
     "php": ">=5.4.0",
-    "simshaun/recurr": "0.4.*"
+    "simshaun/recurr": "0.4.*",
+    "nategood/httpful": "*"
   },
   "autoload": {
     "psr-4": {
